--- a/app/members.html
+++ b/app/members.html
@@ -3,9 +3,12 @@ layout: default
 title: ps
 ---
 
-<div style="background:url('/images/about.jpg') center center;height:450px;">BIG IMAGE</div>
+{% include shared/header.html %}
 
-<div class="bg-black">
+
+<div class="banner" style="background:url('/images/about.jpg')"></div>
+
+<div class="bg-black text-white">
 	<section class="pad-top-m pad-bottom-m">
 		<div class="five off-four">
 			<form>
