--- a/app/members/category.html
+++ b/app/members/category.html
@@ -4,12 +4,13 @@ title: ps
 ---
 
 
+{% include shared/header.html %}
 
 
 
-<div class="bg-gray pad-bottom-l red-ul">
+<div class="bg-gray pad-bottom-l">
 	<section>
-		<div class="six off-one pad-top-l pad-bottom-l">
+		<div class="six off-one pad-top-xl pad-bottom-m">
 			<h2 class="">Creativity</h2>
 			<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
 			</p>
@@ -18,62 +19,78 @@ title: ps
 	</section>
 	<section>
 		<div class="ten off-one">
-			<ul class="block-grid four-up">
+			<ul class="block-grid four-up link-black text-s">
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
+				</li>
+								<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
-				</li>
-				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
-					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
-					</p>
+					</a>
 				</li>
 			</ul>
 		</div>
@@ -81,4 +98,3 @@ title: ps
 </div>	
 
 
-{% include shared/register.html %}
