--- a/app/members/entry.html
+++ b/app/members/entry.html
@@ -3,30 +3,63 @@ layout: default
 title: ps
 ---
 
+{% include shared/header.html %}
 
-<div class="bg-gray red-ul news">
 
-	<section class="pad-bottom-xl">
-		<div class="six off-one">
-			<h1 class="link-black-ul"><a href="">Username on subject</a></h1>
+<div class="bg-gray text-black red-ul article">
+
+	<section class="pad-top-xl pad-bottom-xl">
+		<div class="six off-one pad-bottom-s">
+			<h1 class="link-black"><a href="">Chris Hadfield on Subject of Article</a></h1>
 			<p class="" style="font-size:28px;">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 		</div>
 		<div class="ten">
 			<div class="nestImage">
-				<img src="http://placehold.it/950x490/fda75f/ffffff">
+				<img src="/images/news/1.png">
 			</div>
 		</div>
 
-		<div class="six off-one pad-top-s pad-bottom-m">
+		<div class="six off-one pad-top-s">
 			<p class="">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 			<p class="">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 			<p class="">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 		</div>
 	</section>
 
-
+<section class="pad-bottom-l">
+		<div class="ten off-one">
+			<h2 class="">Discover More</h2>
+			<ul class="block-grid three-up text-s link-black">
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 </div>	
 
 
-{% include shared/register.html %}
