--- a/app/members/list.html
+++ b/app/members/list.html
@@ -3,11 +3,14 @@ layout: default
 title: ps
 ---
 
+{% include shared/header.html %}
 
-<div class="bg-gray red-ul">
+
+
+<div class="bg-gray text-black">
 
 	<section>
-		<div class="six off-one pad-top-l pad-bottom-l">
+		<div class="six off-one pad-top-xl pad-bottom-l">
 			<h2 class="">Members</h2>
 			<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
 			</p>
@@ -21,62 +24,78 @@ title: ps
 	</section>
 	<section>
 		<div class="ten off-one">
-			<ul class="block-grid four-up">
+			<ul class="block-grid four-up link-black">
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
-					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
-					</p>
+					<a href="/members/profile">
+						<div class="circle" style="background-image: url('/images/speakers/Chris-Hadfield.jpg');"></div>
+						<p class="text-center">
+							<strong>Colonel Chris Hadfield</strong><br />
+							Canadian Astronaut
+						</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/kingsley-aikins.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Kingsley Aikins</strong><br />
+						(MC) Diaspora Expert
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/frank-dick.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Dr. Frank Dick OBE</strong><br />
+						Leading Motivational Speaker
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/miriam-ocallaghan.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Miriam O’Callaghan</strong><br />
+						(Guest Interviewer) Broadcaster &amp; Journalist
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/jack-black.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Jack Black</strong><br />
+						Leading Authority on Personal Development
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/john-mullins.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>John Mullins</strong><br />
+						CEO Amarenco
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/loretto-callaghan.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Loretto Callaghan</strong><br />
+						CEO &amp; Country Manager Novartis
 					</p>
+					</a>
 				</li>
 				<li class="person">
-					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+					<a href="/members/profile">
+					<div class="circle" style="background-image: url('/images/speakers/gurra-krantz.jpg');"></div>
 					<p class="text-center">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Gurra Krantz</strong><br />
+						Leadership Expert
 					</p>
+					</a>
 				</li>
 			</ul>
 		</div>
@@ -87,4 +106,3 @@ title: ps
 </div>	
 
 
-{% include shared/register.html %}
