--- a/app/news.html
+++ b/app/news.html
@@ -3,7 +3,10 @@ layout: default
 title: ps
 ---
 
-<div class="bg-black news">
+{% include shared/header.html %}
+
+
+<div class="bg-black text-white news">
 
 
 <br />
@@ -21,7 +24,7 @@ title: ps
 		</div>
 		<div class="ten off-one">
 			<div class="nestImage">
-				<img src="http://placehold.it/950x490/fda75f/ffffff">
+				<img src="/images/news/1.png">
 			</div>
 		</div>
 		<div class="two off-two pad-top-s date">
@@ -41,7 +44,7 @@ title: ps
 		</div>
 		<div class="ten off-one">
 			<div class="nestImage">
-				<img src="http://placehold.it/950x490/fda75f/ffffff">
+				<img src="/images/news/1.png">
 			</div>
 		</div>
 		<div class="two off-two pad-top-s date">
@@ -50,7 +53,7 @@ title: ps
 		<div class="six pad-top-s">
 			<p class="pad-bottom-m">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 
-			<a href="/news" class="btn">READ MORE</a>
+			<a href="/news/entry" class="btn">READ MORE</a>
 		</div>
 	</section>
 
