--- a/app/register.html
+++ b/app/register.html
@@ -3,9 +3,12 @@ layout: default
 title: ps
 ---
 
-<div style="background:url('/images/about.jpg') center center;height:450px;">BIG IMAGE</div>
+{% include shared/header.html %}
 
-<div class="bg-black">
+
+<div class="banner" style="background:url('/images/about.jpg')"></div>
+
+<div class="bg-black text-white">
 	<section class="pad-top-m pad-bottom-m">
 		<div class="ten off-one">
 			<div class="four">
@@ -53,7 +56,7 @@ title: ps
 			</p>
 			<p>Each speaker is asked to demonstrate how they used a combination of hard work, inspiration and motivation to overcome adversity and maintain a successful balanced life.</p>
 
-			<div class="three pad-top-s"><input type="submit" value="Become a Member" class="btn"></div>
+			<div class="pad-top-s"><a href="/members" class="btn">Become a Member</a></div>
 
 		</div>
 
