--- a/app/testimonials.html
+++ b/app/testimonials.html
@@ -3,9 +3,12 @@ layout: default
 title: ps
 ---
 
-<div style="background:url('/images/testimonials.jpg') center center;height:450px;">BIG IMAGE</div>
+{% include shared/header.html %}
 
-<div class="bg-black">
+<div class="show-on-desktops">
+<div class="banner" style="background:url('/images/testimonials.jpg');"></div>
+
+<div class="bg-black text-white">
 	<section>
 		<div class="six off-four pad-top-l pad-bottom-l">
 			<h2>Spark Creativity and Innovation</h2>
@@ -16,21 +19,23 @@ title: ps
 
 	<section>
 		<div class="eight off-two pad-bottom-l">
-			<iframe width="100%" height="450" src="//www.youtube.com/embed/04ufimjXEbA" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="450" src="//www.youtube.com/embed/7EQ5QojmhYY?list=UUCrWs2Ng73PZuKcUWh9ZzhA" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</section>
 
 
 
 	<section>
-		<div class="six off-five pad-bottom-s">
+		<div class="six off-five pad-top-s">
 			<h2>Don’t take our word for it</h2>
-
-			
-			<div class="pad-top-xl pad-bottom-xl">Slider</div>
-
-
 		</div>
+		<div class="eight off-two pad-bottom-s">
+	
+			<div class="pad-bottom-xl">
+				<img src="/images/testimonials/1.jpg"/>
+			</div>
+		</div>
+
 	</section>
 
 
@@ -38,20 +43,22 @@ title: ps
 
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+			<div class="circle" style="background-image: url('/images/speakers/frank-dick.jpg');"></div>
 		</div>
 		<div class="six">
-			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+			<br />
+			<p><em>“The Pendulum Summit is a truly outstanding concept. Its impact will be significant and substantial for Ireland's renaissance in persistently redefining excellence in the world's most challenging arenas. Pendulum dreams, designs and delivers excellence. They are the winning difference.”</em><br />
+			<strong>—Dr. Frank Dick OBE, Leading Motivational Speaker</strong></p>
 		</div>
 	</section>
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+			<div class="circle" style="background-image: url('/images/speakers/jack-black.jpg');"></div>
 		</div>
 		<div class="six">
-			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+			<br />
+			<p><em>“I’ve had the privilege of presenting at conferences all round the world so I can honestly say that the professionalism, production, attention to detail and the understanding of speakers’ needs that comes with appearing at a Pendulum event is truly a world class experience.”</em><br />
+			<strong>—Jack Black, Leading Authority on Personal Development</strong></p>
 		</div>
 	</section>
 
@@ -61,38 +68,38 @@ title: ps
 			<ul class="block-grid two-up text-s">
 				<li class="">
 					<div class="four">
-						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+						<div class="circleSmall" style="background-image: url('/images/speakers/barry-o-sullivan.jpg');"></div>
 					</div>
 					<div class="eight">
 						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-						<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+						<strong>—Barry O'Sullivan, Senior Vice President, Cisco & Dragon on Dragons' Den</strong></p>
 					</div>
 				</li>
 				<li class="">
 					<div class="four">
-						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+						<div class="circleSmall" style="background-image: url('/images/speakers/paul-mcneive.jpg');"></div>
 					</div>
 					<div class="eight">
-						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-						<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+						<p><em>“The Pendulum team conceived, organised and delivered every detail of a world class summit. The "Speakers Brief" was so thorough and challenging that I felt inspired to give the performance of my life. On the day, the event was superb, from AV through to the Pendulum team helping with every little thing. The Speakers were made to feel very special and the audience got the benefits. The reaction from the attendees was fantastic and the sponsor got amazing PR. I look forward to working with them again.”</em><br />
+						<strong>—Paul McNeive, Motivational Speaker and Business Development Expert</strong></p>
 					</div>
 				</li>
 				<li class="">
 					<div class="four">
-						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+						<div class="circleSmall" style="background-image: url('/images/speakers/gurra-krantz.jpg');"></div>
 					</div>
 					<div class="eight">
-						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-						<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+						<p><em>“A magic day! As a speaker I left with as much inspiration as the participating delegates. Every now and then that special event happens. Everybody including the speakers go home with that sensational feeling of having experienced something special.”</em><br />
+						<strong>—Gurra Krantz, Swedish Leadership Expert</strong></p>
 					</div>
 				</li>
 				<li class="">
 					<div class="four">
-						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+						<div class="circleSmall" style="background-image: url('/images/speakers/David-Bobbett.jpg');"></div>
 					</div>
 					<div class="eight">
-						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-						<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+						<p><em>“I found the summit inspiring as the variety of speakers were able to convey how they personally try to raise their performance levels and ensure a positive work life balance. Success is built on features such as performance with pride, culture over strategy, and a focus on being the best at what you do.”</em><br />
+						<strong>—David Bobbett, CEO H&amp;K International</strong></p>
 					</div>
 				</li>
 			</ul>
@@ -102,26 +109,66 @@ title: ps
 
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+			<div class="circle" style="background-color:#777;background-image: url('/images/speakers/');"></div>
 		</div>
 		<div class="six">
-			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+			<p><em>“I attend several conferences each year, mostly in the USA and mostly on the topic of Talent Management, Leadership and Learning. I can honestly say that the Pendulum Summit compared very favourably with the best conferences I have attended in the US. The speaker line-up of high calibre thought-leaders (Irish and International), as well as successful Irish business leaders, was outstanding. The 1-minute audience participation sessions gave visibility and voice to other high profile experts. The "fun stuff" to kick off after each break really created a relaxed atmosphere. Affordable price-point and good value for money. Yes - I would absolutely be interested in attending a similar event in the future and would recommend it to colleagues and friends.”</em><br />
+			<strong>—Maria O' Donoghue, Vice President, Global Learning &amp; Talent Management, the Hertz Corporation</strong></p>
 		</div>
 	</section>
-	<section class="pad-bottom-xl">
+	<section class="pad-bottom-m">
 		<div class="two off-two">
-			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+			<div class="circle" style="background-color:#777;background-image: url('/images/speakers/');"></div>
 		</div>
 		<div class="six">
-			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
-			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+			<p><em>“I've been going to various conferences now for over forty years, many of them with a motivational flavour. But I have never been at one that was so motivating, so up-lifting, so positive and yet so practical as your conference yesterday. So, all in all, a stunning success. Irish people can be critical and cynical, from time to time. And to keep them satisfied for such a long day was an amazing achievement. We could all feel the positivity hormones bouncing off the four walls! I spoke to a lot of the participants and I heard nothing but the highest praise - for the event...and for you. I just wish I was 30 years younger; I know I could go out and take on the world....and win!”</em><br />
+			<strong>—Redmond O’ Donoghue, Ex Chairman Fáilte Ireland</strong></p>
 		</div>
 	</section>
-
-
 </div>	
+</div>
 
+<div class="content hide-on-desktops bg-black text-white pad-top-l pad-bottom-xl">
+	<div class="pad-bottom-xl">
+		<h2>Spark Creativity and Innovation</h2>
+		<p>We all need to take a break from routine in order to stay at the top of our game. A change of scenery, especially one that is rich with educational and networking opportunities, can help you spark your creativity, develop new ideas and think in innovative ways.</p> 
+		<p>Empower yourself at the Pendulum Summit and reach your full potential in all aspects of your life.</p>
+	</div>
+
+	
+	<h2>Don’t take our word for it</h2>
+	<div>
+		<br />
+		<div class="circleSmall" style="background-image: url('/images/speakers/frank-dick.jpg');"></div>
+		<br />
+		<p><em>“The Pendulum Summit is a truly outstanding concept. Its impact will be significant and substantial for Ireland's renaissance in persistently redefining excellence in the world's most challenging arenas. Pendulum dreams, designs and delivers excellence. They are the winning difference.”</em><br />
+		<strong>—Dr. Frank Dick OBE, Leading Motivational Speaker</strong></p>
+	</div>
+
+	<div>
+		<br />
+		<div class="circleSmall" style="background-image: url('/images/speakers/jack-black.jpg');"></div>
+		<br />
+		<p><em>“I’ve had the privilege of presenting at conferences all round the world so I can honestly say that the professionalism, production, attention to detail and the understanding of speakers’ needs that comes with appearing at a Pendulum event is truly a world class experience.”</em><br />
+		<strong>—Jack Black, Leading Authority on Personal Development</strong></p>
+	</div>
+
+	<div>
+		<br />
+		<div class="circleSmall" style="background-image: url('/images/speakers/barry-o-sullivan.jpg');"></div>
+		<br />
+		<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
+		<strong>—Barry O'Sullivan, Senior Vice President, Cisco & Dragon on Dragons' Den</strong></p>
+	</div>
+
+	<div>
+		<br />
+		<div class="circleSmall" style="background-image: url('/images/speakers/paul-mcneive.jpg');"></div>
+		<br />
+		<p><em>“The Pendulum team conceived, organised and delivered every detail of a world class summit. The "Speakers Brief" was so thorough and challenging that I felt inspired to give the performance of my life. On the day, the event was superb, from AV through to the Pendulum team helping with every little thing. The Speakers were made to feel very special and the audience got the benefits. The reaction from the attendees was fantastic and the sponsor got amazing PR. I look forward to working with them again.”</em><br />
+		<strong>—Paul McNeive, Motivational Speaker and Business Development Expert</strong></p>
+	</div>
+</div>
 
 
 {% include shared/register.html %}
