--- a/app/members/area.html
+++ b/app/members/area.html
@@ -3,10 +3,12 @@ layout: default
 title: ps
 ---
 
+{% include shared/header.html %}
 
-<div class="bg-black">
+
+<div class="bg-black text-white">
 	<section>
-		<div class="six off-one pad-top-l pad-bottom-l">
+		<div class="six off-one pad-top-xl pad-bottom-l">
 			<h2 class="">Member’s Area</h2>
 			<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
 			</p>
@@ -16,81 +18,216 @@ title: ps
 </div>
 
 
-<div class="bg-gray pad-top-m pad-bottom-l red-ul">
-	<section>
+<div class="bg-gray pad-bottom-m">
+	<section class="pad-top-m pad-bottom-m">
 		<div class="five off-one">
 			<h2 class="">Creativity</h2>
-			<ul class="block-grid two-up">
+			<ul class="block-grid two-up link-black text-s">
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<h5 class="">
-						<strong>Speaker Name</strong><br />
-						Company
-					</h5>
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 			</ul>
 			<div class="pad-top-s">
-				<div class="three"><input type="submit" value="See all entries in this category" class="btn"></div>
+					<a href="memebers/category" class="btn">See all entries in this category</a>
 			</div>
 		</div>
 		<div class="five">
 			<h2 class="">Well-being</h2>
-			<ul class="block-grid two-up">
+			<ul class="block-grid two-up link-black text-s">
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 			</ul>
 			<div class="pad-top-s">
-				<div class="three"><input type="submit" value="See all entries in this category" class="btn"></div>
+					<a href="memebers/category" class="btn">See all entries in this category</a>
+			</div>
+		</div>
+	</section>
+	<section class="pad-top-m pad-bottom-m">
+		<div class="five off-one">
+			<h2 class="">Self Improvement</h2>
+			<ul class="block-grid two-up link-black text-s">
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+			</ul>
+			<div class="pad-top-s">
+					<a href="memebers/category" class="btn">See all entries in this category</a>
+			</div>
+		</div>
+		<div class="five">
+			<h2 class="">Business</h2>
+			<ul class="block-grid two-up link-black text-s">
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+			</ul>
+			<div class="pad-top-s">
+					<a href="memebers/category" class="btn">See all entries in this category</a>
+			</div>
+		</div>
+	</section>
+
+
+
+	<section class="pad-top-xl pad-bottom-l">
+
+
+		<div class="six off-one pad-bottom-s">
+			<h2 class="">Member Spotlight</h2>
+		</div>
+		<div class="eight off-one pad-bottom-m text-s link-black">
+			<iframe width="100%" height="450" src="//www.youtube.com/embed/7EQ5QojmhYY?list=UUCrWs2Ng73PZuKcUWh9ZzhA" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="eight off-one pad-bottom-s">
+
+			<div class="four">
+				<div class="circle" style="background-image: url('/images/speakers/chris-hadfield.jpg');"></div>
+			</div>
+			<div class="eight">
+				<h2 class="">Chris Hadfield</h2>
+				<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
+				</p>
+				<p>Each speaker is asked to demonstrate how they used a combination of hard work, inspiration and motivation to overcome adversity and maintain a successful balanced life.</p>
+
+				<div class="pad-top-s">
+					<a href="memebrs/profile" class="btn">See Chris’s full profile</a>
+				</div>
 			</div>
 		</div>
 	</section>
 </div>	
 
 
-{% include shared/register.html %}
