--- a/app/members/profile.html
+++ b/app/members/profile.html
@@ -3,25 +3,27 @@ layout: default
 title: ps
 ---
 
+{% include shared/header.html %}
 
-<div class="bg-gray red-ul">
 
-	<section class="pad-top-l pad-bottom-l">
+<div class="bg-gray text-black red-ul">
+
+	<section class="pad-top-xl pad-bottom-l">
 		<div class="three off-one pad-top-s">
-			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
+			<div class="circle" style="background-image: url('/images/speakers/Chris-Hadfield.jpg');"></div>
 		</div>
 
 		<div class="six pad-bottom-s">
-			<h2 class="">Speakers for 2015</h2>
+			<h2 class="">Chris Hadfield</h2>
 			<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
 			</p>
 			<p>Each speaker is asked to demonstrate how they used a combination of hard work, inspiration and motivation to overcome adversity and maintain a successful balanced life.</p>
 			<p>
-				<a href="">johnmcmillan.com</a><br />
-				<a href="">@johnmcmillan</a>
+				<a href="">chirshadfield.com</a><br />
+				<a href="">@chrishadfield</a>
 			</p>
 			<div class="pad-top-s">
-				<div class="three"><input type="submit" value="Connect with John" class="btn"></div>
+				<a href="memebers/profile" class="btn">Connect with Chris</a>
 			</div>
 		</div>
 	</section>
@@ -29,48 +31,59 @@ title: ps
 	<section class="pad-bottom-l">
 		<div class="ten off-one">
 			<h2 class="">John’s Articles</h2>
-			<ul class="block-grid three-up">
+			<ul class="block-grid three-up text-s link-black">
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
+					</p>
+					</a>
+				</li>
+				<li class="">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
+					<p class="">
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
+					</a>
 				</li>
 				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+					<a href="/members/entry">
+					<img src="/images/news/1.png">
 					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
+						<strong>Article Title</strong><br />
+						Chris Hadfield
 					</p>
-				</li>
-				<li class="">
-					<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
-					<p class="">
-						<strong>Speaker Name</strong><br />
-						Company
-					</p>
+					</a>
 				</li>
 			</ul>
 
